file name renaming, new export

--- a/plot_creator.ipynb
+++ b/plot_creator.ipynb
@@ -186,7 +186,7 @@
    "source": [
     "from matplotlib.backends.backend_pdf import PdfPages\n",
     "\n",
-    "with PdfPages('Day1_Plots.pdf') as pdf:\n",
+    "with PdfPages('Day1_ExtractorPotentialGraphs.pdf') as pdf:\n",
     "    for i in range (24, 36+1):\n",
     "        spectroParamFile = f\"./Lab Data/Data_240619/rdm24-06-19_{i}.txt\"\n",
     "        datafile = f'./Lab Data/Data_240619/24-06-19_{i}_ch2.txt'\n",
